--- a/未命名.md
+++ b/未命名.md
@@ -50,117 +50,42 @@ $\vec{a} \cdot \vec{b}=|a||b|\cos \phi$
 
 $\vec{a} \times \vec{b} = |a||b|\sin \phi$，是平行四边形的面积
 
-（3.45）
 
-OK. I'll just do it like this. When you understand this diagram, you'll understand what I'm trying to say.
+希尔伯特，这位最伟大的数学家——或许与庞加莱并列为1900年前后最杰出的两位数学家——将其大部分精力都投入了数理逻辑的研究。但有人知道后来数理逻辑领域发生了什么吗？希尔伯特的纲领被一位年轻的博士生证明是不可能实现的。你们听说过这个人的名字吗？很好。
 
-That is, this thing is equal to. So we have proven the distributive law for vector product. I want you to review carefully that diagram, that complicated diagram, and understand that this proof thoroughly.
+我认为哥德尔不仅是史上最伟大的数理逻辑学家，更必须承认他是人类思想史上最伟大的思想家之一，因为他证明了希尔伯特计划——那种试图将全部数学按照欧几里得几何学风格体系化的构想——是不可能实现的。这一发现引发了数学思维方式的革命。
 
-OK. With that, we can now have a important formula. Algebraic formula for vector product.
+此后，一位名叫图灵的英国青年数论学家崭露头角。然后还有冯·诺伊曼。图灵和冯·诺伊曼从事的是数理逻辑的研究。这催生了现代计算机的诞生。当然，现代计算机的影响，我相信你们所有人都意识到了。冯·诺依曼和图灵都为此做出了重大贡献。
 
-Namely, A cross B is equal to A X I plus A Y J plus A Z K cross B X I plus B Y J plus B Z K. And that's equal to. And now using the distributive law, we have nine terms. But I cross I. What is I cross I? Is zero because sine phi is zero.
+例如，图灵发明了通用计算机的概念。他所证明的是，所有现代计算机，只要每台都拥有无限内存，且不考虑时间因素，它们在功能上都是等价的。一台计算机能完成的任务，另一台计算机同样可以完成，他的计算机也不例外。他的电脑被称为图灵电脑。为了纪念他，国际上设立了一个名为图灵奖的奖项。这是软件理论领域的最高荣誉。
 
-So all the I items are. So there are only cross products which are not zero. Now, I cross J right here.
+我很高兴，相信你们也会很高兴，得知姚期智教授，也就是 Andy Yao，现在已经成为清华大学的教授。他几年前获得了图灵奖，这相当于软件理论界的诺贝尔奖。这一切都遵循着一种关于数学逻辑和数字定义的推理。如果你沿着这个宏大的论证走下去，其中一个分支会引出实数、复数，然后下一个被称为四元数。这一点还可以进一步证明。这个证明虽然长但并不难。我相信只要详细解释，你们每个人都能理解。它们每一个都被称为一个可除代数。
 
-I cross J is equal to K. Obviously, I is the unit vector on X axis. J is the unit vector along Y axis. If you take the product, the lengths are both equal to one.
+除代数是一种类似于复数的代数结构。复数系统就是一个除代数，这意味着你可以在该系统内进行加、减、乘运算，并且可以除以任何非零数。对于实数系统而言，你当然可以进行加、减、乘运算，并且只要分母不为零，也可以进行除法运算。
 
-The angle is 90 degrees. Sine phi is equal to one. So therefore, it becomes a unit vector along the Z axis.
+复数具有相同的性质。因此，复数系统也是一个可除代数。已经证明存在第三种，且仅存在第三种，称为四元数。四元数系统包含一套数字体系，是复数概念的推广。在该系统中，只要分母不为零，就可以进行加、减、乘、除运算。
 
-So I have this. And of course, the cyclic permutation J cross K is equal to I. K cross I is equal to J. Cyclic permutation. This is a common notation.
+你可以证明没有更多了。但复数、实数和复数之间是有区别的，这与四元数形成对比。在复数中，乘法是可交换的。在复数系统中，a乘以b等于b乘以a。但在四元数系统中，a乘以b不等于b乘以a。因此，实数和复数在乘法上是可交换的。但是四元数在乘法中是不可交换的。在物理学中，最初每次你想乘两个量时，因为它们都是实数或复数，所以是可交换的。
 
-CP is a cyclic permutation. That means that you write down this equation. And it's true also with the cyclic permutation.
+但随着量子力学的发展，我们现在知道量子力学的基础是非交换代数。因此，在量子力学发展起来后，物理学家们意识到，你不仅需要使用实数，还必须使用复数。你不仅要处理可交换的代数，还必须处理非交换的代数。
 
-Cyclic permutation, meaning J replacing I, K replacing J, I replacing K in that order. OK, so now it becomes obvious that J cross K will give me I. So therefore, I get A Y B Z minus A Z B Y times I plus A Z B I B X. No, A Z B X minus A X B Z times J plus A X B Y minus A Y B X times K. So the line terms become six terms. And they are combined in this fashion, which is equal to a determinant.
+因此，人们更容易接受这样一种观点：或许我们今天使用的数字体系需要进一步扩展。既然我已经向你们介绍了这么多关于四元数的内容，我想我应该再详细讲解一下，尤其是我们还有一些时间。复数体系处理的是 $a+bi$ 的形式。
 
-I have a tendency to underline I. Just forget about it. I don't need to underline. Right? That determinant, if you expand it.
+四元数系统处理的是 $a+bi+cj+dk$。它有三个虚数单位：i、j、k。其乘法规则为 $i$ 的平方等于 $j$ 的平方等于 $k$ 的平方等于负一。ixj=k，jxi=-k，以此类推。这就定义了四元数代数。现在你已经知道如何进行加法和乘法运算。但问题是如何进行除法运算。
 
-By the way, if you do not remember or have never studied the determinants, go back and study it. It's extremely important. And you have to be very familiar with the determinant.
+定理是这样的。q 的逆，是这样一个数，无论在前或在后与 q 相乘，结果都等于一。这与复数的情况非常相似。
 
-Now, according to the determinant, if you expand it according to the first row, because I times this two by two determinant, which is A Y B Z minus A Z B Y plus X like this. So we have now proven this formula, which is very important. By the way, we had earlier said A cross B is equal to minus B cross A. That is very obvious if you use this formula, because if you switch A and B, you are switching two rows, switching two rows of a determinant.
+对于复数来说，一个复数的逆等于该复数的共轭复数除以其绝对值的平方。这只是一个推广。你可能会问，为什么哈密顿只选择了 i、j、k？为什么不只用 i、j？为什么不选择 i、j、k、l？这些都是需要证明的。
 
-Fundamental theorem is that it changes the sign of the determinant, et cetera. Take another one. What is A dot A cross B? If you do A dot A cross B, that means you remember a thought something.
+$q^{-1} = \frac{1}{a^2+b^2+c^2+d^2}(a-bi-cj-dk)$
 
-You take two vectors, you take the external component of this times, the X component of this plus the Y component of this times, the Y component of this Z component of this times the Z component of this. You add those three terms. So if you do it here, it is equivalent to replacing this I by if I now wanted the A dot A cross B. All I have to do is replace IJK by AXAYAZ.
+例如，事实证明，如果你试图切断并发明一些关于 i 和 j 的乘法规则，你可以证明这是行不通的。只有当你拥有三个虚数，并且这三个虚数满足这一规则时，这才构成一个可除代数。这是一个优美的定理，但并非由汉密尔顿所证明。
 
-Then you get a determinant which has two rows which are identical. Another theorem says if you have a determinant with two rows identical, it's equal to zero. So that's another proof of A dot A cross B equal to zero.
+哈密尔顿只发明了这种代数并证明了可以进行除法运算。但后来人们发现，如果想要得到一个可除代数，实际上只有三种可能：实数、复数和四元数。关于为什么有人希望或期待四元数能应用于物理学，我无法向你提供详细解释，但如果你阅读我的论文选集，我记得在第 23 页，我对此有一些评论。
 
-So is everything crystal clear? Am I going too fast or am I going too slow? OK, let's vote. Who wants to say I'm going too slow? Who wants to say I'm going too fast? Most people have no opinion. I think you are too shy.
 
-I assume that everybody has understood everything. If you have not completely understood it. OK, for those people who think that I'm going too fast, which particular point you want me to explain again? No, no, no, don't be shy.
+--------------
 
-If you haven't understood anything, you can ask now. Or have you understood everything? Yes? I just see the last page of your paper. Last page.
-
-Which page? Thank you. I would like to ask, from this step to this step, is the proof at this time using this rectangle? Is it using the rectangle on the paper just now? Yes. Is it using this rectangle? Yes.
-
-Is it using this rectangle to prove that this is not a pass? Yes. Is it a clear opinion? Yes, it is very clear. This student asked me, just now... Do you need more money? No, no, no.
-
-Just now, in these few steps, how to prove it? By looking at this picture. The key point in this picture is the red parallelogram is the blue parallelogram enlarged by 90 degrees. If you have understood this concept, you can go back and look at this.
-
-Every step is correct. If you have any questions, you can go back and study it carefully. For example, if the length of A is equal to 1, then the red parallelogram is exactly the same as the blue one, but it is rotated by 90 degrees.
-
-Because every length is multiplied by 1, then it is equal to the original length. If A is equal to 2, then it is enlarged by 1. After you have understood this, you will know that every step is correct. OK, if you have no questions, if you have no questions, I will go back to the quaternion I just talked about.
-
-I think those of you who are interested in math will find what I am going to talk about very interesting. Because the number, as I just said, actually one starts with integers. Then, because one wants to divide, so one gets into fractions.
-
-But from fractions, we got into irrational numbers, namely all real numbers. Does everybody know when people began to realize that they are irrational numbers? Does anybody know whether there are more... A rational number is a fraction. A irrational number is a real number which cannot be written as a fraction.
-
-This is not the correct definition, but it is a definition that everybody would understand. Does anybody know are there more real numbers, are there more rational numbers, or are there more irrational numbers? Why? How do you know that there are more irrational numbers? This is a question which was only resolved in the 19th century. It follows a rule called the diagonal rule.
-
-If you read some popular mathematics books, it will explain to you, using the diagonal argument you can prove that there are many, many more irrational numbers than there are rational numbers. And that line of mathematical development became very, very important and became... that led to the science of mathematical logic. Mathematical logic was one of the most important subjects in mathematics around the beginning of the 20th century.
-
-And Hilbert, who was the greatest mathematician, perhaps with the Poincaré, the two greatest mathematicians around the year 1900, devoted much of his effort to mathematical logic. But does anybody know what happened to mathematical logic afterwards? Hilbert's program was proven to be impossible by a young Ph.D. candidate. Have you heard of this person's name? Good.
-
-(该文件长度超过30分钟。 在TurboScribe.ai点击升级到无限，以转录长达10小时的文件。)
-
-(转录由TurboScribe.ai完成。升级到无限以移除此消息。)
-
-I think Godot not only is the greatest mathematical logician, one must agree that he is one of the greatest thinkers in the history of mankind because he proved that the kind of Hilbert project which wanted to put all mathematics along the style of Euclid's geometry is impossible. That caused a revolution in mathematical thinking. After that, there was a young British number theorist called Turing.
-
-And then there was von Neumann. Turing and von Neumann were working in mathematical logic. And this gave rise to a modern computer.
-
-And the influence of modern computers, of course, is something that I'm sure all of you realize. Von Neumann and Turing both made major contributions to this. For example, Turing invented the idea of a universal computer.
-
-What he proved is that all modern computers, if each of them has infinite memory, if you do not worry about time, then they are all equivalent. What can be done by one computer can be done by another computer. And can be done by his computer.
-
-His computer is called the Turing computer. And in order to honor him, there is an international prize called the Turing Prize. It is the highest award in software theory.
-
-And I'm very happy, and I'm sure you would be very happy, to know that Professor Yao Qizhi, Andy Yao, has now become a professor at Tsinghua. He won the Turing Prize a few years ago. It's equivalent to the Nobel Prize in software theory.
-
-And all of this follows a kind of a reasoning about the logic of mathematics and the definition of numbers. And if you follow that large argument, one branch would lead to the idea that there are real numbers, there are complex numbers, then the next one is called quaternions. It can be further proven.
-
-This proof is long but not difficult. I'm sure every one of you can understand it if it's explained to you in detail. Each of them is called a division algebra.
-
-A division algebra is an algebra like a complex number. The complex number system is a division algebra, meaning you can add, you can subtract, you can multiply, and you can divide by any number in that system which is not zero. For the real number system, you can certainly add, subtract, you can multiply, and you can divide provided the denominator is not zero.
-
-The complex number has the same property. So the complex number system also is a division algebra. It is proven that there is a third one, and only a third one, called quaternions.
-
-The quaternions system has a system of numbers. It's a generalization of complex numbers. And there you can add, subtract, and divide, multiply and divide, provided the denominator is not zero.
-
-And you can prove that there are no more. But there's a difference between complex number, real numbers and complex numbers, as contrasted with quaternions. Multiplication is commutative in complex numbers.
-
-a times b is equal to b times a in the complex number system. But a times b is not equal to b times a in the quaternion system. So real numbers and complex numbers are commutative in multiplication.
-
-But quaternions are not commutative. In multiplication. Now in physics, originally every time you want to multiply two quantities, because they were real numbers or complex numbers, it's commutative.
-
-But with quantum mechanics, we now know that quantum mechanics is based on algebra, which is not commutative. So after quantum mechanics was developed, physicists realized that you not only have to use real numbers, you have to use complex numbers. You not only have to deal with algebra, which is commutative, you have to deal with algebras, which are non-commutative.
-
-Therefore, it became much more acceptable to imagine that perhaps the number system that we are using today needs to be broadened. Now after having told you so much about the quaternions, I think I need to give you a little bit of details about it, especially since we still have some time. A complex number system deals with a plus bi.
-
-A quaternion system deals with a plus bi plus cj plus dk. It has three imaginary numbers, i, j, k. The multiplication rules is i squared equal to j squared equal to k squared equal to minus one. i, j is equal to k is equal to minus ji, cyclic permutation.
-
-This now defines the quaternion algebra. So you now know how to add and multiply. But the question is how to divide.
-
-The theorem is this. Q, the inverse of Q, inverse of Q is the number which multiplied by Q, either in front or in the back, is equal to one. This is equal to, you see that this is very similar to complex numbers.
-
-With complex numbers, the inverse of a complex number is equal to the complex conjugate of that number divided by the absolute value squared of that number. This is just a generalization of that. So you might say that why did Hamilton choose only i, j, k? Why not just i, j? Why not i, j, kl? These need proofs.
-
-It turns out, for example, if you cut off and try to invent some rules for multiplication of i and j, you can prove that it would not work. It's only when you have three, that you have three imaginary numbers satisfying this rule, that this is a division algebra. This is a beautiful theorem, which is not proven by Hamilton.
-
-Hamilton only invented this algebra and proved that you can divide. But later it was proven that if you want to have a division algebra, there are only three. There are the real number, complex number, and the quaternions.
-
-As to why there is the hope or the expectation that quaternions would enter into physics, I cannot give you any details, but if you read my selected papers, I think it's page 23, I have some comments about that. I assigned 12 exercises. I want you to hand them in next Monday.
-
-Do not, don't be late. I went faster than I thought I would. So I propose that we do the following.
 
 I'll sit here and we'll stop the lectures, but you can individually come and ask me questions in the next half hour. Okay, goodbye. I hope you have no difficulties with your exercises.
 
